# substrate-node-template

./: .dockerignore  .gitignore  Dockerfile  LOGIC.md  Makefile  README.md  TODO.md  build.sh  docker-compose.yml  errors  genesis.json  start.sh
.cargo/: config.toml
b6c1c1b/client/api/src/: backend.rs  client.rs
b6c1c1b/client/basic-authorship/src/: basic_authorship.rs
b6c1c1b/client/block-builder/: Cargo.toml
b6c1c1b/client/block-builder/src/: lib.rs
b6c1c1b/client/chain-spec/src/: chain_spec.rs
b6c1c1b/client/cli/src/: arg_enums.rs  config.rs  lib.rs  runner.rs
b6c1c1b/client/cli/src/commands/: insert_key.rs  run_cmd.rs
b6c1c1b/client/cli/src/params/: mod.rs  node_key_params.rs
b6c1c1b/client/consensus/babe/: Cargo.toml
b6c1c1b/client/consensus/babe/src/: authorship.rs  lib.rs  verification.rs
b6c1c1b/client/consensus/common/src/: import_queue.rs
b6c1c1b/client/consensus/common/src/import_queue/: basic_queue.rs
b6c1c1b/client/consensus/epochs/: Cargo.toml
b6c1c1b/client/consensus/epochs/src/: lib.rs
b6c1c1b/client/consensus/slots/: Cargo.toml
b6c1c1b/client/consensus/slots/src/: aux_schema.rs  lib.rs  slots.rs
b6c1c1b/client/db/src/: lib.rs  parity_db.rs  storage_cache.rs  utils.rs
b6c1c1b/client/finality-grandpa/src/: environment.rs  finality_proof.rs  warp_proof.rs
b6c1c1b/client/informant/src/: lib.rs
b6c1c1b/client/keystore/: Cargo.toml
b6c1c1b/client/keystore/src/: local.rs
b6c1c1b/client/network/src/: behaviour.rs  lib.rs  protocol.rs  service.rs
b6c1c1b/client/network/src/protocol/: message.rs  sync.rs
b6c1c1b/client/network/src/protocol/notifications/: behaviour.rs  handler.rs
b6c1c1b/client/network/test/src/: lib.rs
b6c1c1b/client/rpc/src/state/: state_full.rs
b6c1c1b/client/service/: Cargo.toml
b6c1c1b/client/service/src/: builder.rs  lib.rs
b6c1c1b/client/service/src/client/: call_executor.rs  client.rs
b6c1c1b/frame/babe/src/: lib.rs
b6c1c1b/frame/executive/: Cargo.toml
b6c1c1b/frame/executive/src/: lib.rs
b6c1c1b/frame/session/src/: lib.rs  mock.rs
b6c1c1b/frame/session/src/historical/: mod.rs
b6c1c1b/frame/staking/src/pallet/: impls.rs  mod.rs
b6c1c1b/frame/support/src/traits/: validation.rs
b6c1c1b/frame/system/src/: lib.rs
b6c1c1b/frame/timestamp/src/: lib.rs
b6c1c1b/primitives/api/proc-macro/: Cargo.toml
b6c1c1b/primitives/api/proc-macro/src/: decl_runtime_apis.rs
b6c1c1b/primitives/application-crypto/: Cargo.toml
b6c1c1b/primitives/application-crypto/src/: sr25519.rs
b6c1c1b/primitives/block-builder/src/: lib.rs
b6c1c1b/primitives/consensus/babe/src/: inherents.rs
b6c1c1b/primitives/consensus/common/src/: lib.rs
b6c1c1b/primitives/consensus/slots/src/: lib.rs
b6c1c1b/primitives/io/src/: lib.rs
b6c1c1b/primitives/keyring/src/: sr25519.rs
b6c1c1b/primitives/keystore/src/: lib.rs  testing.rs
b6c1c1b/primitives/npos-elections/src/: phragmms.rs
b6c1c1b/primitives/runtime/src/: lib.rs
b6c1c1b/primitives/runtime/src/generic/: digest.rs  header.rs
b6c1c1b/primitives/session/: Cargo.toml
b6c1c1b/primitives/session/src/: lib.rs
b6c1c1b/primitives/state-machine/src/: backend.rs  lib.rs
b6c1c1b/primitives/state-machine/src/overlayed_changes/: mod.rs
b6c1c1b/primitives/timestamp/src/: lib.rs
b6c1c1b/test-utils/runtime/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: common.rs  lib.rs
scripts/: alice.sh  bob.sh  charlie.sh  clean_all.sh  ids.tmp  package.json  test.js  test.json
scripts/cmd/: 198bob.sh  alice.sh  bob.sh  charlie.sh  check_ids.sh  clean_all.sh  docker.sh  generate_key.sh  key.sh  log_alice  log_bob  log_unknown  multi.sh  nohup.out  start.sh  unknown_node.sh
scripts/cmd/tmp/: alice.sh  bob.sh  charlie.sh  multi.sh
scripts/install/: js_init.sh  parity_install.sh  start.sh  yarn_install.sh
scripts/javascripts/: async.js  custom_extrincs.js  js_init.sh  keyring.js  package.json  readkeys.js  transfer_async.js
scripts/javascripts/extrincs/: balance_transfer.js  session_addKey.js  session_helloWorld.js  session_transferStakeTo.js
scripts/javascripts/tests/: keys.data  learning_substrate.js  readkeys.js
