[package]
name = 'node-template'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
build = 'build.rs'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
path = "../b6c1c1b/utils/build-script-utils"
version = '3.0.0'

[dependencies.node-template-runtime]
path = '../runtime'
version = '4.0.0-dev'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
path = "../b6c1c1b/frame/benchmarking"
version = '4.0.0-dev'

[dependencies.frame-benchmarking-cli]
path = "../b6c1c1b/utils/frame/benchmarking-cli"
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc]
path = "../b6c1c1b/frame/transaction-payment/rpc"
version = '4.0.0-dev'

[dependencies.sc-basic-authorship]
path = "../b6c1c1b/client/basic-authorship"
version = '0.10.0-dev'

[dependencies.sc-cli]
features = ['wasmtime']
path = "../b6c1c1b/client/cli"
version = '0.10.0-dev'

[dependencies.sc-client-api]
path = "../b6c1c1b/client/api"
version = '4.0.0-dev'

[dependencies.sc-consensus]
path = "../b6c1c1b/client/consensus/common"
version = '0.10.0-dev'

[dependencies.sc-consensus-babe]
path = "../b6c1c1b/client/consensus/babe"
version = '0.10.0-dev'

[dependencies.sc-executor]
features = ['wasmtime']
path = "../b6c1c1b/client/executor"
version = '0.10.0-dev'

[dependencies.sc-keystore]
path = "../b6c1c1b/client/keystore"
version = '4.0.0-dev'

[dependencies.sc-rpc]
path = "../b6c1c1b/client/rpc"
version = '4.0.0-dev'

[dependencies.sc-rpc-api]
path = "../b6c1c1b/client/rpc-api"
version = '0.10.0-dev'

[dependencies.sc-service]
features = ['wasmtime']
path = "../b6c1c1b/client/service"
version = '0.10.0-dev'

[dependencies.sc-telemetry]
path = "../b6c1c1b/client/telemetry"
version = '4.0.0-dev'

[dependencies.sc-finality-grandpa]
path = "../b6c1c1b/client/finality-grandpa"

[dependencies.sc-transaction-pool]
path = "../b6c1c1b/client/transaction-pool"
version = '4.0.0-dev'

[dependencies.sc-transaction-pool-api]
path = "../b6c1c1b/client/transaction-pool/api"
version = '4.0.0-dev'

[dependencies.sp-api]
path = "../b6c1c1b/primitives/api"
version = '4.0.0-dev'

[dependencies.sp-block-builder]
path = "../b6c1c1b/primitives/block-builder"
version = '4.0.0-dev'

[dependencies.sp-blockchain]
path = "../b6c1c1b/primitives/blockchain"
version = '4.0.0-dev'

[dependencies.sp-consensus]
path = "../b6c1c1b/primitives/consensus/common"
version = '0.10.0-dev'

[dependencies.sp-consensus-babe]
path = "../b6c1c1b/primitives/consensus/babe"
version = '0.10.0-dev'

[dependencies.pallet-session]
default-features = false
path = "../b6c1c1b/frame/session"
version = '4.0.0-dev'

[dependencies.sp-core]
path = "../b6c1c1b/primitives/core"
version = '4.0.0-dev'

[dependencies.sp-finality-grandpa]
path = "../b6c1c1b/primitives/finality-grandpa"
version = '4.0.0-dev'

[dependencies.sp-runtime]
path = "../b6c1c1b/primitives/runtime"
version = '4.0.0-dev'

[dependencies.sp-timestamp]
path = "../b6c1c1b/primitives/timestamp"
version = '4.0.0-dev'

[dependencies.sp-inherents]
path = "../b6c1c1b/primitives/inherents"
version = '4.0.0-dev'

[dependencies.substrate-frame-rpc-system]
path = "../b6c1c1b/utils/frame/rpc/system"
version = '4.0.0-dev'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
