[package]
name = 'node-template-runtime'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.pallet-template]
default-features = false
path = '../pallets/template'
version = '4.0.0-dev'

[build-dependencies.substrate-wasm-builder]
path = "../b6c1c1b/utils/wasm-builder"
version = '5.0.0-dev'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
path = "../b6c1c1b/frame/benchmarking"
optional = true
version = '4.0.0-dev'

[dependencies.frame-executive]
path = "../b6c1c1b/frame/executive"
default-features = false
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
path = "../b6c1c1b/frame/support"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
path = "../b6c1c1b/frame/system"
version = '4.0.0-dev'

[dependencies.frame-system-benchmarking]
default-features = false
path = "../b6c1c1b/frame/system/benchmarking"
optional = true
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
path = "../b6c1c1b/frame/system/rpc/runtime-api"
version = '4.0.0-dev'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-babe]
default-features = false
path = "../b6c1c1b/frame/babe"
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
path = "../b6c1c1b/frame/balances"
version = '4.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
default-features = false
path = "../b6c1c1b/frame/randomness-collective-flip"
version = '4.0.0-dev'


[dependencies.pallet-sudo]
default-features = false
path = "../b6c1c1b/frame/sudo"
version = '4.0.0-dev'

[dependencies.pallet-session]
default-features = false
path = "../b6c1c1b/frame/session"
features = ["historical"]
version = '4.0.0-dev'

# for staking
[dependencies.pallet-staking]
default-features = false
path = "../b6c1c1b/frame/staking"
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
path = "../b6c1c1b/frame/timestamp"
version = '4.0.0-dev'

#pallet_transaction_payment for staking
[dependencies.pallet-transaction-payment]
default-features = false
path = "../b6c1c1b/frame/transaction-payment"
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
path = "../b6c1c1b/frame/transaction-payment/rpc/runtime-api"
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-api]
default-features = false
path = "../b6c1c1b/primitives/api"
version = '4.0.0-dev'

[dependencies.sp-block-builder]
default-features = false
path = "../b6c1c1b/primitives/block-builder"
version = '4.0.0-dev'

[dependencies.sp-consensus-babe]
default-features = false
path = "../b6c1c1b/primitives/consensus/babe"
version = '0.10.0-dev'

[dependencies.sp-core]
default-features = false
path = "../b6c1c1b/primitives/core"
version = '4.0.0-dev'

[dependencies.sp-inherents]
default-features = false
path = "../b6c1c1b/primitives/inherents"
version = '4.0.0-dev'

[dependencies.sp-offchain]
default-features = false
path = "../b6c1c1b/primitives/offchain"
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
path = "../b6c1c1b/primitives/runtime"
version = '4.0.0-dev'

[dependencies.sp-session]
default-features = false
path = "../b6c1c1b/primitives/session"
version = '4.0.0-dev'

[dependencies.sp-staking]
default-features = false
path = "../b6c1c1b/primitives/staking"
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
path = "../b6c1c1b/primitives/std"
version = '4.0.0-dev'

[dependencies.sp-transaction-pool]
default-features = false
path = "../b6c1c1b/primitives/transaction-pool"
version = '4.0.0-dev'

[dependencies.sp-version]
default-features = false
path = "../b6c1c1b/primitives/version"
version = '4.0.0-dev'

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
	"pallet-session/std",
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
